--- a/basic.css
+++ b/basic.css
@@ -49,9 +49,7 @@ body {
   padding: 15px 15px 60px;
   text-align: center;
 }
-.navbar-twitch.navbar-inverse > .container .navbar-brand > .small-nav > span.logo {
-  /*color: rgb(255, 255, 255);*/
-}
+
 .navbar-twitch .navbar-nav > li {
   float: none;
 }
@@ -131,6 +129,7 @@ body {
   position: relative;
   margin: 0 10px 10px 0;
   text-decoration: none;
+  transition: color 0.2s;
   -webkit-transition: color 0.2s;
 }
 
